--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-key-index": "^0.1.1",
     "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.2.1",
+    "uuidv4": "^6.2.6",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
