--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -16,9 +17,12 @@
     "react-icons": "^4.2.0",
     "react-key-index": "^0.1.1",
     "react-leaflet": "^3.1.0",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "uuidv4": "^6.2.6",
     "web-vitals": "^1.1.0"
   },
