--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "bootstrap": "^4.6.0",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
+    "plotly.js": "^1.58.4",
+    "plotly.js-dist": "^1.58.4",
     "prop-types": "^15.7.2",
+    "qs": "^6.10.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-key-index": "^0.1.1",
     "react-leaflet": "^3.1.0",
+    "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
