--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "apexcharts": "^3.26.0",
     "bootstrap": "^4.6.0",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
@@ -15,6 +16,7 @@
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
