--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: haiwave/cei-repo
+          images: haiwave/cei-repo:front
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
@@ -41,4 +41,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            docker pull haiwave/cei-repo
+            docker pull haiwave/cei-repo:front
+            docker stop cei-app
+            docker rm cei-app
+            docker run -d -p 9000:80 --name cei-app haiwave/cei-repo:front
