--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,7 +31,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: front
+          tags: "${{ secrets.DOCKER_USERNAME }}/cei-repo:main"
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Pull and start image
