--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -42,6 +42,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
+          envs: DCKR_USRNM
           script: |
             docker pull haiwave/cei-repo:front
             docker stop cei-app
