--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.1",
     "apexcharts": "^3.26.0",
     "bootstrap": "^4.6.0",
+    "latest-version": "^7.0.0",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "plotly.js": "^1.58.4",
