--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "plotly.js-dist": "^1.58.4",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
+    "radium": "^0.26.2",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.1",
