--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.1",
+    "react-calendar": "^3.9.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-key-index": "^0.1.1",
