--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.2.0",
     "react-key-index": "^0.1.1",
     "react-leaflet": "^3.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
