--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-	"name": "cei",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@react-leaflet/core": "^1.0.2",
-		"@reduxjs/toolkit": "^1.5.1",
-		"@testing-library/jest-dom": "^5.11.9",
-		"@testing-library/react": "^11.2.5",
-		"@testing-library/user-event": "^12.8.1",
-		"apexcharts": "^3.26.0",
-		"bootstrap": "^4.6.2",
-		"latest-version": "^7.0.0",
-		"leaflet": "^1.7.1",
-		"moment": "^2.29.1",
-		"plotly.js": "^1.58.4",
-		"plotly.js-dist": "^1.58.4",
-		"prop-types": "^15.7.2",
-		"qs": "^6.10.1",
-		"radium": "^0.26.2",
-		"react": "^17.0.1",
-		"react-apexcharts": "^1.3.9",
-		"react-bootstrap": "^1.6.6",
-		"react-calendar": "^3.9.0",
-		"react-dom": "^17.0.1",
-		"react-icons": "^4.2.0",
-		"react-key-index": "^0.1.1",
-		"react-leaflet": "^3.1.0",
-		"react-loader-spinner": "^5.3.4",
-		"react-plotly.js": "^2.5.1",
-		"react-redux": "^7.2.3",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
-		"react-select": "^4.2.1",
-		"redux": "^4.0.5",
-		"redux-persist": "^6.0.0",
-		"uuidv4": "^6.2.6",
-		"web-vitals": "^1.1.0"
-	},
-	"scripts": {
-		"start": "react-scripts --openssl-legacy-provider start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "cei",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@react-leaflet/core": "^1.0.2",
+    "@reduxjs/toolkit": "^1.5.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.1",
+    "apexcharts": "^3.26.0",
+    "bootstrap": "^4.6.2",
+    "latest-version": "^7.0.0",
+    "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
+    "plotly.js": "^1.58.4",
+    "plotly.js-dist": "^1.58.4",
+    "prop-types": "^15.7.2",
+    "qs": "^6.10.1",
+    "radium": "^0.26.2",
+    "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^1.6.6",
+    "react-calendar": "^3.9.0",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-key-index": "^0.1.1",
+    "react-leaflet": "^3.1.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-plotly.js": "^2.5.1",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-select": "^4.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "uuidv4": "^6.2.6",
+    "web-vitals": "^1.1.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
