--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: "${{ secrets.DOCKER_USERNAME }}/cei-repo"
+          images: "${{ secrets.DOCKER_USERNAME }}/cei-front"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
@@ -31,7 +31,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: "${{ secrets.DOCKER_USERNAME }}/cei-repo:front"
+          tags: "${{ secrets.DOCKER_USERNAME }}/cei-front:latest"
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Pull and start image
@@ -44,7 +44,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           envs: DCKR_USRNM
           script: |
-            docker pull "$DCKR_USRNM/cei-repo:front"
+            docker pull "$DCKR_USRNM/cei-front:latest"
             docker stop cei-app
             docker rm cei-app
-            docker run -d -p 9000:80 --name cei-app "$DCKR_USRNM/cei-repo:front"
+            docker run -d -p 9000:80 --name cei-app "$DCKR_USRNM/cei-front:latest"
