--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"latest-version": "^7.0.0",
 		"leaflet": "^1.7.1",
 		"moment": "^2.29.1",
+		"npm": "^10.8.1",
 		"plotly.js": "^1.58.4",
 		"plotly.js-dist": "^1.58.4",
 		"prop-types": "^15.7.2",
@@ -30,12 +31,14 @@
 		"react-plotly.js": "^2.5.1",
 		"react-redux": "^7.2.3",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^5.0.1",
 		"react-select": "^4.2.1",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
 		"uuidv4": "^6.2.6",
-		"web-vitals": "^1.1.0"
+		"web-vitals": "^1.1.0",
+		"webpack": "^5.92.1",
+		"webpack-cli": "^5.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
