--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # dependencies
 /node_modules
-/.pnp
+prod
 .pnp.js
 
 # testing
@@ -13,8 +13,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.env
-.env.*
 .vscode/
 build/
 build.zip
