--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-apexcharts": "^1.3.9",
 		"react-bootstrap": "^2.10.4",
 		"react-calendar": "^3.9.0",
+		"react-datetime-picker": "^6.0.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^4.2.0",
 		"react-key-index": "^0.1.1",
